<resources>
    <string name="app_name">Workload</string>

    <string name="action_settings">Settings</string>
    <string name="action_manage_lectures">Lectures</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_reminder_toggle">Weekly Reminder</string>
    <string name="action_privacy_agreement">Privacy Agreement</string>
    <string name="action_about">About</string>
    <string name="title_activity_calendar">Time Monitor</string>
    <string name="shibboleth_authenticator">TU Dresden</string>
    <string name="title_activity_select_lecture">SelectLecture</string>
    <string name="title_activity_enter_workload">EnterWorkload</string>
    <string name="content_provider_authority">de.tu-dresden.zqa.survey</string>
    <string name="title_activity_web_login">Shibboleth Login</string>
    <string name="workentry_table_name">workentries</string>
    <string name="lectures_table_name">lectures</string>
    <string name="account_type">tu-dresden.de</string>
    <string name="account_name">Uni-Account</string>
    <string name="privacy_agreement">Erklärung zum Datenschutz
-Einwilligungserklärung-
Zu Zwecken der Qualitätssicherung nach § 9 SächsHSFG, hier insbesondere § 9 Abs. 3 Satz 5, sollen Daten zur persönlichen Arbeitsbelastung der Studierenden der Fachrichtung Physik erhoben und genutzt werden. Die Datenerhebung und Nutzung erfolgt in diesem Fall durch das ZQA (Zentrum für Qualitätsanalyse) der TU Dresden unter Mitwirkung der Fachschaft des Fachbereiches Physik der TU Dresden. Die Datenerhebung und weitere Verarbeitung erfolgt im Grundsatz anonym, nur in ganz besonderen Einzelfällen (z.B. einer sehr ungewöhnlichen Fächerkombination) kann es u.U. möglich sein, dass die Daten dennoch einer Person zugeordnet werden können. Die gewonnen und akkumulierten Daten werden von der Fachschaft sowie der Studien- und Fachkommission ausschließlich dazu genutzt, die Arbeitsbelastung der Studierenden in Zukunft gleichmäßiger zu verteilen und damit, durch Verbesserung des Ablaufes von Studiengängen, in vertrauensvoller Zusammenarbeit Einfluss auf die Qualität der Lehre zu nehmen. Endauswertungen in statistischer Form werden den Studierenden der Fachrichtung Physik zur Kenntnis gegeben. Die Einwilligung zur Teilnahme an der Befragung ist selbstverständlich freiwillig und kann ohne jegliche Rechtsfolgen verweigert werden oder jederzeit beim ZQA der TU Dresden ( http://tu-dresden.de/die_tu_dresden/zentrale_einrichtungen/zqa/ ) widerrufen werden. Ein Widerruf, der eine unverzügliche Löschung der Daten herbeiführt, hat jedoch nur Wirkung, wenn sich die Daten nachträglich eindeutig der Person zuordnen lassen, die den Widerruf abgegeben hat. </string>
    <string name="about">This app was built by <a href="http://www.boosted.science">Konstantin Schubert</a> for the FSR Physik TU Dresden.</string>
    <string name="about_email">
        For any questions, wishes or suggestions please send an email with subject "WorkloadApp" to the FSR: <a href=" mailto:fsrphysik@mailbox.tu-dresden.de?subject=Workloadapp">fsrphysik@mailbox.tu-dresden.de</a>.
    </string>

    <string name="reminder_title">Some data still missing</string>
    <string name="reminder_text">No data has been entered yet for at least one lecture.</string>



    <!-- String constants -->
    <string name="show_reminder_notification">show_reminder_notification</string>

</resources>
